tests/type-errors/no_container_partition_var.arl
archetype no_container_partition_var

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et partition;
}

entry start () {
	effect {
		var ev : et partition = [];
		require (ev.count() = 0)
	}
}
